# hierarchial-data

./: README.md  pyproject.toml
fc_user/: admin.py  forms.py  models.py
fc_user/migrations/: 0001_initial.py
mptt_app/: admin.py  forms.py  models.py  views.py
mptt_app/migrations/: 0001_initial.py
mptt_project/: settings.py  urls.py
templates/: generic_form.html  index.html  user_cabinet.html
